<resources>
    <string name="app_name">BIJOU</string>
    <string name="open_start_drawer">打开左侧边栏</string>
    <string name="search_hint">世界从这里开始</string>
    <string name="dark_mode">深色模式</string>
    <string name="bijou_2">BIJOU 2</string>
    <string name="word">期待你的如约而至</string>
    <string name="no_trace">无痕浏览</string>
    <string name="ua_pc">桌面版UA</string>
    <string name="full_screen">全屏模式</string>
    <string name="bookmark">书签</string>
    <string name="history">历史</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="source">源码</string>
    <string name="settings">设置</string>
    <string name="export">导出</string>
    <string name="ua">标识</string>
    <string name="multiple_page">多窗口切换</string>
    <string name="picture">图片</string>
    <string name="pdf">PDF</string>
    <string name="qr_result">扫描结果</string>
    <string name="copy">复制结果</string>
    <string name="search_open">打开/搜索</string>
    <string name="current_page">当前窗口</string>
    <string name="new_page_fore">前台新窗口</string>
    <string name="new_page_back">后台新窗口</string>
    <string name="dismiss_qr_content_dialog">关闭弹窗</string>
    <string name="copy_cancel">复制/取消</string>
    <string name="browser_ua">浏览器标识</string>
    <string name="apply">应用</string>
    <string name="reset">恢复默认</string>
    <string name="cancel">取消</string>
    <string name="custom_ua">自定义浏览器标识</string>
    <string name="built_in_ua">内置浏览器标识</string>
    <string name="kua_ua">夸克(轻微屏蔽广告)</string>
    <string name="simple_ua">简单搜索(屏蔽百度系广告)</string>
    <string name="we_ua">微信(部分网站仅支持微信访问)</string>
    <string name="ie_ua">IE 10(部分网站仅支持IE访问)</string>
    <string name="symbain_ua">塞班(某些网站可无需客户端下载)</string>
    <string name="copy_anc">复制链接地址</string>
    <string name="new_page_fore_open">前台新窗口打开</string>
    <string name="new_page_back_open">后台新窗口打开</string>
    <string name="show_img">查看图片</string>
    <string name="save_img">保存图片</string>
    <string name="find_hint">在这里输入查找内容</string>
    <string name="rule">常规</string>
    <string name="engine">搜索引擎</string>
    <string name="toolbar_content">顶栏内容</string>
    <string name="data_clear">清除数据</string>
    <string name="dark_mode_follow_system">深色模式跟随系统</string>
    <string name="opera">操作</string>
    <string name="drop_reload">下拉刷新</string>
    <string name="key_ctrl">音量键翻页</string>
    <string name="high">高级</string>
    <string name="javascript">启用JavaScript</string>
    <string name="recovery">启动时恢复未关闭页面</string>
    <string name="support">支持作者</string>
    <string name="myhdg">\@MyHdg</string>
    <string name="about">关于BIJOU</string>
    <string name="version">2.1</string>
    <string name="title">标题</string>
    <string name="website">网址</string>
    <string name="domain">域名</string>
    <string name="baidu">百度</string>
    <string name="bing">必应</string>
    <string name="sm">神马</string>
    <string name="custom">自定义</string>
    <string name="home_page">主页</string>
    <string name="google">谷歌</string>
    <string name="input_engine">自定义搜索引擎并按回车键确认</string>
    <string name="default_home">默认</string>
    <string name="input_home">自定义主页并按回车键确认</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_form">清理表单</string>
    <string name="clear_history">清空历史</string>
    <string name="auto_clear">打开开关即可每次退出时自动清理(注意：主动杀死进程不生效)</string>
    <string name="version_code">当前版本：</string>
    <string name="check_update">检查更新</string>
    <string name="bijou_2_open">BIJOU 2 开源地址</string>
    <string name="bijou_2_open_source">https://github.com/MyHdg0601/BIJOU</string>
    <string name="bijou_1_5_open">BIJOU 1.5 开源地址</string>
    <string name="bijou_1_5_open_source">https://gitee.com/MyHdg/browser</string>
    <string name="other_open">BIJOU 所涉及的开源项目在开源地址中均有提及</string>
    <string name="add">添加</string>
    <string name="input_bookmark_title">输入书签标题</string>
    <string name="input_bokkmark_site">输入书签网址</string>
    <string name="regex" formatted="false"><![CDATA[[\\n`~!@#$%^&*()+=|{}\':;\',\\\\[\\\\]<>/?~！@#￥%……&*（）——+|{}【】‘；：”“’。， 、？]]]></string>
    <string name="file_name">文件名</string>
    <string name="dl_url">地址</string>
    <string name="input_file_name">输入文件名</string>
    <string name="input_dl_url">输入下载地址</string>
    <string name="file_name_notice">检查文件名，若文件名自动获取有误，请手动更改</string>
    <string name="qq">添加QQ好友</string>
    <string name="qq_tip">可以建议，也可以和作者一起探讨其他问题</string>
    <string name="qq_group">加入MyHdg内测QQ群</string>
    <string name="qq_group_tip">尝鲜内测，惊喜和意外谁先来临呢</string>
    <string name="subscription">关注MyHdg微信公众号</string>
    <string name="subscription_tip">敬请期待，微信公众号暂未创建</string>
    <string name="alipay">支付宝请我喝瓶水</string>
    <string name="alipay_tip">自愿捐赠，捐赠与否不影响BIJOU任何功能</string>
</resources>
