<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qr_result"
        android:textColor="@color/colorTextPrimary"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/qr_content_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorTransparent"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minWidth="300dp"
        android:minHeight="44dp"
        android:textColor="@color/colorTextAuxiliary"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search_open"
        android:textColor="@color/colorTextAuxiliary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_page_fore_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/new_page_fore"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/current_page_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/current_page"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/new_page_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/new_page_back"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/copy_cancel"
        android:textColor="@color/colorTextAuxiliary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/copy_content_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/copy"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dismiss_qr_content_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/dismiss_qr_content_dialog"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
