<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@mipmap/bijou" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/word_t"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:text="@string/bijou_2"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/word_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/word"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp" />

</RelativeLayout>